Fix alignment of thumbnails in background images view

--- a/styles/manage-background-images.less
+++ b/styles/manage-background-images.less
@@ -8,8 +8,10 @@
   padding: 1em;
   background: @secondary-color;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   list-style: none;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .pure-background-image-thumbnail-container {
@@ -26,5 +28,5 @@
 }
 
 .pure-background-image-thumbnail {
-  width: 175px;
+  width: 150px;
 }
